--- a/package.json
+++ b/package.json
@@ -22,7 +22,14 @@
     "@types/jsonwebtoken": "~8.5.9",
     "@types/node": "^24.1.0",
     "@types/uuid": "~8.3.4",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "concurrently": "^9.2.0",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
